# diabuddy-ai

./: .gitignore  README.md
backend/: .gitignore  README.md  pyproject.toml
backend/app/: constants.py  diaChatTest.ipynb  main.py  server.py
backend/app/auth/: auth0.py
backend/app/chains/: agentic.py  chat.py
backend/app/database/: database.py
backend/app/db/: mongodb.py
backend/app/dependencies/: auth.py  database.py
backend/app/exceptions/: common.py
backend/app/ingest/: faiss.py
backend/app/models/: chat.py  user.py
backend/app/repositories/: Chat.py  User.py  chat.py  user.py
backend/app/routers/: chat.py  chats.py  user.py  users.py
backend/app/schemas/: chat.py  user.py
backend/app/services/: chat.py  chat_history_service.py  chat_service.py  user.py  user_service.py
backend/app/utils/: chat_message.py  sse.py
backend/tests/: retrever.py
backend/vectorstores/faiss/: index.faiss  index.pkl
frontend/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.tsx
frontend/src/app/: constants.ts  index.css  interfaces.ts  routes.ts  store.ts
frontend/src/app/auth/: Auth0ProviderWithNavigate.tsx  WithAuthGuard.tsx  index.ts
frontend/src/app/components/chat/: Conversation.tsx  Input.tsx  Message.tsx  index.ts
frontend/src/app/components/common/: AppLayout.tsx  ErrorPage.tsx  Header.tsx  Loader.tsx  NavBar.tsx
frontend/src/app/containers/: Chat.tsx  Settings.tsx  index.ts
frontend/src/app/containers/common/: EditAuthenticatedUserProfile.tsx
frontend/src/app/contexts/: AppContext.tsx  index.ts
frontend/src/app/hooks/: useIsOnMobile.ts
frontend/src/app/layouts/: App.tsx  Header.tsx  NavBar.tsx  index.ts
frontend/src/app/pages/: Chat.tsx  GetStarted.tsx  NotFound.tsx  Settings.tsx  SetupProfile.tsx  index.ts
frontend/src/app/services/: chat.ts  user.ts
frontend/src/app/utils/: axios.ts  axiosBaseQuery.ts
