[tool.poetry]
name = "DiaBuddy-AI-backend"
version = "0.1.0"
description = "Backend of DiaBuddy-AI"
authors = ["HK <m.a.hansaka@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.51"}
pydantic = "^2.6.4"
unstructured = {extras = ["all-docs"], version = "^0.12.3"}
faiss-cpu = "^1.8.0"
langchain-openai = "^0.1.0"
langchain-experimental = "^0.0.50"
tqdm = "^4.66.2"
langchain = "^0.1.5"
sentence-transformers = "^2.5.1"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
