[tool.poetry]
name = "DiaBuddy-AI-backend"
version = "0.1.0"
description = "Backend of DiaBuddy-AI"
authors = ["HK <m.a.hansaka@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.51"}
unstructured = {extras = ["all-docs"], version = "^0.12.3"}
faiss-cpu = "^1.8.0"
langchain-openai = "^0.1.0"
tqdm = "^4.66.2"
langchain = "^0.1.5"
sentence-transformers = "^2.6.0"
load-dotenv = "^0.1.0"
pydantic = "1.10.13"
ragas = "^0.1.5"
langsmith = "^0.1.38"
langchain-google-genai = "^1.0.1"
pillow = "^10.2.0"
langchain-mongodb = "^0.1.3"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
motor = "^3.4.0"
auth0-python = "^4.7.1"
pytesseract = "^0.3.10"
langchain-huggingface = "^0.0.3"
xmltodict = "^0.13.0"
google-search-results = "^2.4.2"
huggingface-hub = "^0.23.4"
langchainhub = "^0.1.20"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.21"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
